feat: skeletron complete

--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Articolo su internet di Tim Berners-Lee">
+    <meta name="author" content="Matteo Le Pera">
+    <title>Articolo su internet</title>
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
+
 <body>
-    
+    <!-- Main -->
+    <main>
+        <!-- Header -->
+        <header></header>
+        <!-- End-Header -->
+
+        <!-- Section-Article -->
+        <section></section>
+        <!-- End-Section-Article -->
+
+        <!-- Section-Interest -->
+        <section></section>
+        <!-- End-Section-Interest -->
+
+
+    </main>
+    <!-- End-Main -->
+
+
+
+
 </body>
+
 </html>
