feat: section article add title, address, photo and photo caption

--- a/index.html
+++ b/index.html
@@ -15,11 +15,29 @@
     <!-- Main -->
     <main>
         <!-- Header -->
-        <header></header>
+        <header class="header-pattern">
+            <img id="logo" src="./img/logo.svg" alt="logo header the booleaner">
+        </header>
         <!-- End-Header -->
 
         <!-- Section-Article -->
-        <section></section>
+        <section>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <address class="written-by">
+                Scritto da <a href=""> The Booleaner</a> <br>
+                il 10/10/2020
+            </address>
+            <div>
+                <figure>
+                    <img src="./img/tim-1.jpg" alt="tim berners-lee che fa un discorso">
+                    <img src="./img/tim-2.jpg" alt="uno scatto che ritrae tim berners-lee ">
+                    <figcaption>
+                        1st Photo: Jhon S. and James L. Knight Foundation, By Scott Henrichsen <br>
+                        2nd Photo: Wikimedia, by Paul Clarke
+                    </figcaption>
+                </figure>
+            </div>
+        </section>
         <!-- End-Section-Article -->
 
         <!-- Section-Interest -->
