feat: add paragraph and unorder list

--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
                     </figcaption>
                 </figure>
             </div>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem asperiores,<mark>odio laboriosam
+                    possimus
+                    libero natus eius voluptas facere!</mark> Ea tenetur ipsum quae deserunt!
+                Laboriosam reprehenderit earum est perferendis atque!
+                Quisquam iste, ex dolore deserunt minima repellendus unde doloremque iusto soluta!</p>
+
+
+            <!-- UnOrder-List -->
+            <ul>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse magnam iusto commodi nihil maiores
+                    velit quis?</li>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse magnam iusto commodi nihil maiores
+                    velit quis?</li>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse magnam iusto commodi nihil maiores
+                    velit quis?</li>
+            </ul>
+            <!-- End-UnOrder-List -->
+
+
+
         </section>
         <!-- End-Section-Article -->
 
