--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </figure>
             </div>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem asperiores,<mark>odio laboriosam
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem asperiores, <mark>odio laboriosam
                     possimus
                     libero natus eius voluptas facere!</mark> Ea tenetur ipsum quae deserunt!
                 Laboriosam reprehenderit earum est perferendis atque!
@@ -56,8 +56,46 @@
             </ul>
             <!-- End-UnOrder-List -->
 
+            <!-- Table -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="bg-row">Lorem, ipsum dolor.</td>
+                        <td class="bg-row">Lorem, ipsum dolor.</td>
+                        <td class="bg-row">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Ratione magnam consectetur quod vero, officiis
+                            libero odit molestias pariatur saepe modi!</td>
+                    </tr>
 
+                    <tr>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Ratione magnam consectetur quod vero, officiis
+                            libero odit molestias pariatur saepe modi!</td>
+                    </tr>
 
+                    <tr>
+                        <td class="bg-row">Lorem, ipsum dolor.</td>
+                        <td class="bg-row">Lorem, ipsum dolor.</td>
+                        <td class="bg-row">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Ratione magnam consectetur quod vero, officiis
+                            libero odit molestias pariatur saepe modi!</td>
+                    </tr>
+
+                </tbody>
+            </table>
+            <!-- End-Table -->
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae accusantium corrupti
+                expedita recusandae et odio rem, voluptatem <mark>vel dicta nemo quo reiciendis magnam iste
+                eos quam</mark> explicabo delectus quibusdam necessitatibus veniam doloremque vitae!</p>
         </section>
         <!-- End-Section-Article -->
 
