feat: end section interest.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Section-Article -->
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <address class="written-by">
+            <address class="written-by txt-gray">
                 Scritto da <a href=""> The Booleaner</a> <br>
                 il 10/10/2020
             </address>
@@ -100,16 +100,18 @@
         <!-- End-Section-Article -->
 
         <!-- Section-Interest -->
-        <section></section>
+        <section>
+            <div>
+                <h2 class="txt-gray">Potrebbero Interessarti</h2>
+                <h3 class="block-monitor">Lorem, ipsum dolor.</h3>
+                <h3 class="block-graph">Lorem, ipsum dolor.</h3>
+            </div>
+        </section>
         <!-- End-Section-Interest -->
 
 
     </main>
     <!-- End-Main -->
-
-
-
-
 </body>
 
 </html>
